--- a/overlays/production/kustomization.yaml
+++ b/overlays/production/kustomization.yaml
@@ -2,10 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 
-base: 
-- ../../base
+bases: 
+  - ../../base
 
 resources: 
-- roue.yaml
+- route.yaml
 
 namePrefix: prod-
